padronizando feedback-reporter - nomenclatura de classes e variaveis
